# comet

./: .gitignore  Cargo.toml  README.md
codegen/: Cargo.toml
codegen/src/: lib.rs
comet/: Cargo.toml
examples/: hello.ct
ir/: Cargo.toml  graph.dot
ir/src/: builder.rs  fun.rs  graph.rs  lib.rs  lower.rs
parser/: Cargo.toml  build.rs
parser/src/: ast.rs  diagnostics.rs  grammar.lalrpop  lexer.rs  lib.rs  parser.rs  pos.rs  symbol.rs
repl/: Cargo.toml
repl/src/: main.rs
typeck/: Cargo.toml
typeck/src/: error.rs  lib.rs  typecheck.rs
