[package]
name = "comet_codegen"
version = "0.1.0"
authors = ["Blaž Hrastnik <blaz@mxxn.io>"]
license = "MPL-2.0"
edition = "2018"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell" , branch = "llvm8-0", features = ["llvm8-0"] }
comet_ir = { path = "../ir" }
comet_parser = { path = "../parser" }

[dev-dependencies]
pretty_assertions = "0.6"
