[package]
name = "comet_repl"
version = "0.1.0"
authors = ["Blaž Hrastnik <blaz@mxxn.io>"]
license = "MPL-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.16"
comet_parser = { path = "../parser" }
comet_ir = { path = "../ir" }
comet_codegen = { path = "../codegen" }
