[package]
name = "comet_typeck"
version = "0.1.0"
authors = ["Blaž Hrastnik <blaz@mxxn.io>"]
license = "MPL-2.0"
edition = "2018"

[dependencies]
comet_parser = { path = "../parser" }

# error reporting
codespan = {git = "https://github.com/brendanzab/codespan"}
codespan-reporting = {git = "https://github.com/brendanzab/codespan"}
im = "13.0.0"
itertools = "0.8.0"

[dev-dependencies]
pretty_assertions = "0.6"

[patch.crates-io]
codespan = {git = "https://github.com/brendanzab/codespan"}
codespan-reporting = {git = "https://github.com/brendanzab/codespan"}
